Refs #36 - Fix path widget z-index

--- a/eea/facetednavigation/widgets/path/edit.css
+++ b/eea/facetednavigation/widgets/path/edit.css
@@ -2,21 +2,22 @@
   width: 99%;
 }
 
-.tree {
+.faceted-path-widget .tree {
   position: absolute ! important;
   background-color: #FFFFFF;
   border: 1px dotted #CCCCCC;
+  z-index: 1;
 }
 
-.tree > .ltr > li {
+.faceted-path-widget .tree > .ltr > li {
   display: block ! important;
 }
 
-.tree li a {
+.faceted-path-widget .tree li a {
   border: none ! important;
 }
 
-.faceted-path-widget .faceted-path-errors{
+.faceted-path-widget .faceted-path-errors {
   color: red;
   text-align: center;
 }
